--- a/dashboard/example.html
+++ b/dashboard/example.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
+<script src="drawgraph.js"></script>
 
 </head>
 <body>
