dashboard dummy data working

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -23,16 +23,15 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 py-4">
-                <h4 class="text-white">the rold!</h4>
+                <h4 class="text-white">What is moodHub?</h4>
 
-                <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+                <p class="text-muted">moodHub is the best way to analyze data on developer happiness thoughout their projects.  You can add as many developers as you'd like, and click their button to track their happiness over time.  Made with love by Canadians.</p>
             </div>
             <div class="col-sm-4 py-4">
                 <h4 class="text-white">Contact</h4>
                 <ul class="list-unstyled">
                     <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                    <li><a href="#" class="text-white">Like on Facebook</a></li>
-                    <li><a href="#" class="text-white">Email me</a></li>
+                    <li><a href="#" class="text-white">Email moodHub Support</a></li>
                 </ul>
             </div>
         </div>
@@ -50,50 +49,19 @@
 
 
 <div class="album text-muted">
-    <div class="container">
+    <div align='center' class="container">
 
-        <div class="row">
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card">
-                <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-
+    <a href='./example.html'><button type="button" class="btn btn-primary">View Stats for Eric Sund</button></a><br><br>
     </div>
+
+    <div align='center' class="container">
+    <a href='./example.html'><button type="button" class="btn btn-primary">View Stats for Eric Semeniuc</button></a><br><br>
+    </div>
+
+    <div align='center' class="container">
+    <a href='./example.html'><button type="button" class="btn btn-primary">View Stats for Jeanette Johnson</button></a><br><br>
+    </div>
+
 </div>
 
 <footer class="text-muted">
@@ -101,8 +69,8 @@
         <p class="float-right">
             <a href="#">Back to top</a>
         </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
+        <p>moodHub is &copy; 2017 Eric Semeniuc, Eric Sund, Jeanette Johnson, Leif Pederson, Harsh Patel</p>
+
     </div>
 </footer>
 
