--- a/server/moodhub/public/example.html
+++ b/server/moodhub/public/example.html
@@ -1,13 +1,13 @@
-
-<script>var fakeData = {
-    'users': <%= @data.to_json.to_s.html_safe %>
-}
-</script>
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
 <canvas id="myChart" width="400" height="200"></canvas>
+<script src="drawgraph.js"></script>
+
+</head>
+<body>
+</body>
 
 
-
-<script src="/drawgraph.js"></script>
+</html>
